refactored erb to use asset_path as opposed to hard-coded urls

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <header id="home">
   		<!-- Background Image -->
-  		<div class="bg-img" style="background-image: url('/assets/background2.jpg');">
+  		<div class="bg-img" style="background-image: url(<%= asset_path 'background2.jpg' %>);">
   			<div class="overlay"></div>
   		</div>
   		<!-- /Background Image -->
