updated readme with personal reflection

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,7 +1,7 @@
 <h1>About TechCore</h1>
 <p>TechCore is a project built by CodeCore students.</p>
 <p>See the source code at <a href="https://github.com/chilidoggca/techcore" target="_blank">GitHub</a></p>
-<p>See the project deployed to <a href="http://vantechcore.herokuapp.com"  target="_blank">Heroku</a></p>
+<p>See the project deployed at <a href="http://vantechcore.herokuapp.com"  target="_blank">Heroku</a></p>
 <p>&nbsp;</p>
 <h5>Members</h5>
   <div class="row justify-content-center">
