--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Techcore</title>
+    <title>techCore</title>
     <%= csrf_meta_tags %>
 
     <script src="//maps.google.com/maps/api/js?key=AIzaSyDW7rAcaSRM22xIQK-J4G0Hga0Kp6Zx0Vc"></script>
